# Comfyui-Easy-RAG

./: .gitignore  .tracking  README.md  __init__.py  nodes.py  pyproject.toml  rag_core.py  requirements.txt
.github/workflows/: 本地提示词知识库 easy rag 工作流 BY 为毛没有PC版APP.json
example_workflows/: Exmaple_示例工作流.json
locales/en/: main.json  messages.json  nodeDefs.json
locales/zh/: main.json  messages.json  nodeDefs.json
rag/: portrait_examples_chunks_v2.json
rag/Z-Image_2steps/: chunk_portrait_examples.py  chunk_portrait_examples_v2.py  chunk_portrait_examples_v3.py  chunk_portrait_examples_v4.py  portrait_examples_chunks.json  portrait_examples_chunks_v2.json  portrait_examples_chunks_v4.json
web/: easyrag_upload.js  rag_index_mode_ui.js  ragprompt_index_refresh.js  ragprompt_upload.js
