[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-rag-prompt"
version = "1.0.0"
description = "COMFYUI RAG PROMPT - 本地RAG专业提示词生成工具"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = ""
Documentation = ""
"Bug Tracker" = ""

[tool.comfy]
PublisherId = "rag-prompt"
DisplayName = "RAG PROMPT"