[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-easy-rag-lmstudio"
version = "2.4.2"
description = "本插件为 ComfyUI 提供本地 RAG 工作流节点，支持文档构建向量库、检索增强问答，以及 LM Studio 本地多模态对话。"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/nregret/Comfyui-Easy-RAG"
Documentation = "https://github.com/nregret/Comfyui-Easy-RAG#readme"
"Bug Tracker" = "https://github.com/nregret/Comfyui-Easy-RAG/issues"

[tool.comfy]
PublisherId = "nnegret"
DisplayName = "ComfyUI Easy RAG"
